--- a/index.html
+++ b/index.html
@@ -8,117 +8,104 @@
 <style>
 body {
     margin: 0;
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background: #f5f7fa;
-    color: #333;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    background: #ffffff;
+    color: #222;
 }
 
-/* HERO SECTION */
+/* HERO */
 .hero {
-    height: 100vh;
-    background: linear-gradient(120deg, #0a5c6d, #0f8fa5);
-    color: white;
+    min-height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
+                url("images/hero-bg.jpg") center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 20px;
+    color: white;
+    padding: 40px 20px;
 }
 
-.hero-content {
-    max-width: 900px;
+.hero-inner {
+    max-width: 1000px;
+    animation: fadeUp 1.8s ease;
 }
 
-.join-text {
-    font-size: 48px;
-    font-weight: bold;
-    animation: fadeSlide 2s ease;
+.join {
+    font-size: 52px;
+    font-weight: 700;
+    letter-spacing: 1px;
     margin-bottom: 20px;
 }
 
-@keyframes fadeSlide {
-    from { opacity: 0; transform: translateY(-30px); }
+@keyframes fadeUp {
+    from { opacity: 0; transform: translateY(30px); }
     to { opacity: 1; transform: translateY(0); }
 }
 
-.conference-title {
+.title-row {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
     flex-wrap: wrap;
 }
 
-.conference-title img {
-    width: 80px;
+.title-row img {
+    width: 90px;
 }
 
-.conference-title h1 {
-    font-size: 28px;
-    max-width: 500px;
+.title-row h1 {
+    font-size: 30px;
+    font-weight: 600;
     line-height: 1.4;
+    max-width: 600px;
 }
 
-/* SECTION GENERAL */
+/* SECTION */
 .section {
-    padding: 70px 20px;
-    max-width: 1100px;
+    padding: 90px 20px;
+    max-width: 1200px;
     margin: auto;
 }
 
-.section h2 {
-    text-align: center;
-    color: #0a5c6d;
-    margin-bottom: 40px;
-}
-
-/* PRESIDENT SECTION */
-.president {
-    display: flex;
-    gap: 40px;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.president img {
-    width: 260px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
-}
-
-.president-text {
-    flex: 1;
-}
-
-.president-text h3 {
-    margin-top: 0;
-    color: #0a5c6d;
-}
-
-/* DETAILS SECTION */
-.details-grid {
+/* WELCOME */
+.welcome {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 25px;
+    grid-template-columns: 1fr 1.4fr;
+    gap: 50px;
+    align-items: center;
 }
 
-.detail-box {
-    background: white;
-    padding: 25px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+.welcome img {
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
 }
 
-.detail-box h4 {
+.welcome h2 {
+    font-size: 34px;
     margin-top: 0;
     color: #0a5c6d;
 }
 
-footer {
-    background: #083f4a;
-    color: white;
-    text-align: center;
-    padding: 20px;
+.welcome h3 {
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+
+.welcome p {
+    font-size: 17px;
+    line-height: 1.8;
+    color: #444;
+}
+
+/* RESPONSIVE */
+@media(max-width: 900px) {
+    .welcome {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
 }
 </style>
 </head>
@@ -127,13 +114,13 @@ footer {
 
 <!-- HERO -->
 <section class="hero">
-    <div class="hero-content">
-        <div class="join-text">Let’s Join</div>
+    <div class="hero-inner">
+        <div class="join">Let’s Join</div>
 
-        <div class="conference-title">
+        <div class="title-row">
             <img src="images/logo-left.png" alt="Logo Left">
             <h1>
-                2nd TERENGGANU ALLIED HEALTH PROFESSIONAL (AHP)
+                2nd TERENGGANU ALLIED HEALTH PROFESSIONAL (AHP)<br>
                 SCIENTIFIC CONFERENCE
             </h1>
             <img src="images/logo-right.png" alt="Logo Right">
@@ -141,80 +128,31 @@ footer {
     </div>
 </section>
 
-<!-- PRESIDENT MESSAGE -->
+<!-- WELCOME MESSAGE -->
 <section class="section">
-    <h2>Welcome Message</h2>
-    <div class="president">
+    <div class="welcome">
         <img src="images/president.jpg" alt="President AHP Terengganu">
-        <div class="president-text">
-            <h3>President, Allied Health Practitioners Terengganu</h3>
+
+        <div>
+            <h2>Welcome Message</h2>
+            <h3>President, Allied Health Practitioners Negeri Terengganu</h3>
             <p>
-                Welcome to the 2nd Terengganu Allied Health Professional Scientific Conference.
-                This conference aims to provide a platform for allied health professionals
-                to share research findings, clinical experiences, and innovations that
-                contribute to quality healthcare services.
+                On behalf of the Allied Health Practitioners Negeri Terengganu,
+                it is my great pleasure to welcome you to the 2nd Terengganu
+                Allied Health Professional Scientific Conference.
             </p>
             <p>
-                We look forward to your active participation and meaningful knowledge exchange.
+                This conference serves as an important platform for allied
+                health professionals to share research, clinical experiences,
+                and innovative practices towards strengthening healthcare
+                delivery.
+            </p>
+            <p>
+                We look forward to your participation and meaningful engagement.
             </p>
         </div>
     </div>
 </section>
-
-<!-- CONFERENCE DETAILS -->
-<section class="section">
-    <h2>Conference Details</h2>
-
-    <div class="details-grid">
-
-        <div class="detail-box">
-            <h4>Date</h4>
-            <p>To be confirmed</p>
-        </div>
-
-        <div class="detail-box">
-            <h4>Venue</h4>
-            <p>Terengganu, Malaysia</p>
-        </div>
-
-        <div class="detail-box">
-            <h4>Slogan</h4>
-            <p>Empowering Allied Health Through Research & Innovation</p>
-        </div>
-
-        <div class="detail-box">
-            <h4>Category</h4>
-            <ul>
-                <li>Oral Research</li>
-                <li>Oral Case Study</li>
-                <li>Poster</li>
-            </ul>
-        </div>
-
-        <div class="detail-box">
-            <h4>Registration Fees</h4>
-            <p>
-                Member: RM XXX<br>
-                Non-member: RM XXX<br>
-                Student: RM XXX
-            </p>
-        </div>
-
-        <div class="detail-box">
-            <h4>Important Dates</h4>
-            <p>
-                Abstract Submission: DD/MM/YYYY<br>
-                Acceptance Notification: DD/MM/YYYY<br>
-                Conference Date: DD/MM/YYYY
-            </p>
-        </div>
-
-    </div>
-</section>
-
-<footer>
-    &copy; 2026 Terengganu Allied Health Practitioners Conference
-</footer>
 
 </body>
 </html>
