--- a/index.html
+++ b/index.html
@@ -118,13 +118,19 @@ body {
         <div class="join">Let’s Join</div>
 
         <div class="title-row">
-            <img src="images/logo-left.png" alt="Logo Left">
-            <h1>
-                2nd TERENGGANU ALLIED HEALTH PROFESSIONAL (AHP)<br>
-                SCIENTIFIC CONFERENCE
-            </h1>
-            <img src="images/logo-right.png" alt="Logo Right">
-        </div>
+    <img src="images/logo-left.png" alt="Logo Left">
+    <div>
+        <h1>
+            2nd TERENGGANU ALLIED HEALTH PROFESSIONAL (AHP)<br>
+            SCIENTIFIC CONFERENCE
+        </h1>
+        <p class="slogan">
+            Empowering Allied Health Professional: Leading Change for Better Health Outcomes
+        </p>
+    </div>
+    <img src="images/logo-right.png" alt="Logo Right">
+      </div>
+
     </div>
 </section>
 
