--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 }
 
 .join-text {
-    font-size: 72px;
+    font-size: 80px;
     font-weight: 800;
     letter-spacing: 1.5px;
     margin-bottom: 30px;
@@ -94,7 +94,7 @@ body {
 }
 
 .title-block h1 {
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 700;
     line-height: 1.3;
     margin: 0;
@@ -102,12 +102,13 @@ body {
 
 .slogan {
     margin-top: 22px;
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 400;
     opacity: 0.95;
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
+    line-height: 1.4;
 }
 
 /* SECTIONS */
@@ -190,6 +191,11 @@ body {
     padding-left: 18px;
 }
 
+/* Full-width box for Important Dates */
+.details-grid .full-width {
+    grid-column: 1 / -1; /* spans the entire grid width */
+}
+
 /* FOOTER */
 footer {
     background: #083f4a;
@@ -214,15 +220,15 @@ footer {
 
     /* MOBILE FONT ADJUSTMENTS */
     .join-text {
-        font-size: 48px;       /* smaller for mobile */
+        font-size: 52px;
     }
 
     .title-block h1 {
-        font-size: 28px;       /* smaller for mobile */
+        font-size: 32px;
     }
 
     .slogan {
-        font-size: 18px;       /* smaller for mobile */
+        font-size: 18px;
     }
 }
 </style>
@@ -320,7 +326,7 @@ footer {
             </p>
         </div>
 
-        <div class="detail-box">
+        <div class="detail-box full-width">
             <h4>Important Dates</h4>
             <p>
                 Abstract & e-Poster Submission (open): 2 January 2026<br>
