--- a/index.html
+++ b/index.html
@@ -9,11 +9,37 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
+/* GLOBAL */
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
     background: #ffffff;
     color: #1f2933;
+    scroll-behavior: smooth;
+}
+
+/* NAVBAR */
+.navbar {
+    position: sticky;
+    top: 0;
+    background: rgba(10,92,109,0.95);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    padding: 12px 0;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.nav-container a {
+    color: white;
+    text-decoration: none;
+    margin: 0 20px;
+    font-weight: 600;
+    transition: color 0.3s;
+}
+
+.nav-container a:hover {
+    color: #e0f2f1;
 }
 
 /* FLOATING BUTTONS */
@@ -119,38 +145,38 @@ body {
 }
 
 /* WELCOME */
-.welcome {
+#welcome {
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: 60px;
     align-items: center;
 }
 
-.welcome img {
+#welcome img {
     width: 100%;
     border-radius: 10px;
     box-shadow: 0 12px 30px rgba(0,0,0,0.18);
 }
 
-.welcome h2 {
+#welcome h2 {
     font-size: 34px;
     margin-top: 0;
     color: #0a5c6d;
 }
 
-.welcome h3 {
+#welcome h3 {
     margin-bottom: 12px;
     font-weight: 500;
 }
 
-.welcome p {
+#welcome p {
     font-size: 17px;
     line-height: 1.9;
     color: #4b5563;
 }
 
 /* CONFERENCE DETAILS - CREATIVE */
-.details {
+#details {
     background: #f8fafc;
     text-align: center;
 }
@@ -236,6 +262,18 @@ body {
     margin: 10px 0;
 }
 
+/* Scroll animations */
+.animate {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: all 0.8s ease-out;
+}
+
+.animate.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 /* FOOTER */
 footer {
     background: #083f4a;
@@ -247,7 +285,7 @@ footer {
 
 /* RESPONSIVE */
 @media(max-width: 900px) {
-    .welcome {
+    #welcome {
         grid-template-columns: 1fr;
         text-align: center;
     }
@@ -298,6 +336,15 @@ footer {
 
 <body>
 
+<!-- STICKY NAVBAR -->
+<nav class="navbar">
+    <div class="nav-container">
+        <a href="#hero">Home</a>
+        <a href="#welcome">Welcome</a>
+        <a href="#details">Conference Details</a>
+    </div>
+</nav>
+
 <!-- FLOATING BUTTONS -->
 <div class="floating-buttons">
     <a href="https://forms.google.com" target="_blank">Register</a>
@@ -305,7 +352,7 @@ footer {
 </div>
 
 <!-- HERO -->
-<section class="hero">
+<section id="hero" class="hero">
     <div class="hero-content">
         <div class="join-text">Let’s Join</div>
         <div class="title-row">
@@ -326,7 +373,7 @@ footer {
 </section>
 
 <!-- WELCOME MESSAGE -->
-<section class="section">
+<section id="welcome" class="section animate">
     <div class="welcome">
         <img src="images/president.jpg" alt="President AHP Terengganu">
         <div>
@@ -350,7 +397,7 @@ footer {
 </section>
 
 <!-- CONFERENCE DETAILS -->
-<section class="section details">
+<section id="details" class="section details animate">
 
     <!-- DATE -->
     <div class="conference-date">22-23 September 2026</div>
@@ -363,14 +410,14 @@ footer {
     <!-- CATEGORY -->
     <h3 class="details-header">Category</h3>
     <div class="category-grid">
-        <div class="category-box">Oral Research</div>
-        <div class="category-box">Oral Case Study</div>
-        <div class="category-box">Poster</div>
+        <div class="category-box animate">Oral Research</div>
+        <div class="category-box animate">Oral Case Study</div>
+        <div class="category-box animate">Poster</div>
     </div>
 
     <!-- REGISTRATION FEES -->
     <h3 class="details-header">Registration Fees</h3>
-    <div class="registration-fees">
+    <div class="registration-fees animate">
         <div>PASKBT Member: <span>FREE</span></div>
         <div>Non-PASKBT (Terengganu): <span>RM 50</span></div>
         <div>Non-PASKBT (Outside Terengganu): <span>RM 150</span></div>
@@ -378,7 +425,7 @@ footer {
 
     <!-- IMPORTANT DATES -->
     <h3 class="details-header">Important Dates</h3>
-    <div class="important-dates">
+    <div class="important-dates animate">
         <p>Abstract & e-Poster Submission (open): 2 January 2026</p>
         <p>Registration (open): 2 January 2026</p>
         <p>Abstract Submission (deadline): 31 March 2026</p>
@@ -390,6 +437,21 @@ footer {
 <footer>
     &copy; 2026 Terengganu Allied Health Practitioners Conference
 </footer>
+
+<!-- SCROLL ANIMATION JS -->
+<script>
+const elements = document.querySelectorAll('.animate');
+
+const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+        if(entry.isIntersecting) {
+            entry.target.classList.add('visible');
+        }
+    });
+}, { threshold: 0.15 });
+
+elements.forEach(el => observer.observe(el));
+</script>
 
 </body>
 </html>
