--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
     color: #e0f2f1;
 }
 
-/* FLOATING BUTTONS - BIG & INVITING */
+/* FLOATING BUTTONS */
 .floating-buttons {
     position: fixed;
     right: 20px;
@@ -52,41 +52,50 @@ body {
     z-index: 999;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
 }
 
 .floating-buttons a {
     text-decoration: none;
-    padding: 20px 25px;
-    background: linear-gradient(135deg, #0a5c6d, #0f8a99);
+    padding: 14px 18px;
+    background: #0a5c6d;
     color: white;
-    font-size: 16px;
-    font-weight: 700;
-    border-radius: 40px;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 30px;
     text-align: center;
-    box-shadow: 0 12px 30px rgba(0,0,0,0.25);
-    transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    transition: transform 0.2s, background 0.2s;
 }
 
 .floating-buttons a:hover {
-    background: linear-gradient(135deg, #0f8a99, #0a5c6d);
-    transform: translateY(-5px) scale(1.05);
-    box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+    background: #094e5c;
+    transform: translateY(-2px);
 }
 
 /* HERO - PARALLAX */
 .hero {
     min-height: 100vh;
     position: relative;
-    background:
-        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url("images/hero-bg.jpg") center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45));
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
     padding: 40px 20px;
+    overflow: hidden;
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: url("images/hero-bg.jpg") center/cover no-repeat;
+    transform: translateZ(0);
+    z-index: -1;
+    will-change: transform;
 }
 
 .hero-content {
@@ -148,7 +157,7 @@ body {
     position: relative;
 }
 
-/* WELCOME */
+/* WELCOME - flex side by side */
 #welcome {
     display: flex;
     flex-wrap: wrap;
@@ -185,12 +194,13 @@ body {
     color: #4b5563;
 }
 
-/* CONFERENCE DETAILS */
+/* CONFERENCE DETAILS - CREATIVE */
 #details {
     background: #f8fafc;
     text-align: center;
 }
 
+/* Date and Venue */
 .conference-date {
     font-size: 60px;
     font-weight: 800;
@@ -204,6 +214,7 @@ body {
     margin-bottom: 50px;
 }
 
+/* Section Headers */
 .details-header {
     font-size: 28px;
     font-weight: 700;
@@ -287,12 +298,6 @@ body {
     border-radius: 50%;
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     margin-bottom: 15px;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.speaker-box:hover img {
-    transform: scale(1.05);
-    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
 }
 
 .speaker-box h4 {
@@ -395,7 +400,7 @@ footer {
 
 <!-- FLOATING BUTTONS -->
 <div class="floating-buttons">
-    <a href="https://forms.google.com" target="_blank">Register Now</a>
+    <a href="https://forms.google.com" target="_blank">Register</a>
     <a href="https://forms.google.com" target="_blank">Submit Abstract</a>
 </div>
 
@@ -509,6 +514,16 @@ const observer = new IntersectionObserver(entries => {
     });
 }, { threshold: 0.15 });
 elements.forEach(el => observer.observe(el));
+
+// PARALLAX EFFECT
+const parallaxSections = document.querySelectorAll('.hero, #details');
+window.addEventListener('scroll', () => {
+    const scrollY = window.scrollY;
+    parallaxSections.forEach(section => {
+        const bg = section.querySelector('::before');
+        section.style.transform = `translateY(${scrollY * 0.2}px)`;
+    });
+});
 </script>
 
 </body>
