--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 <title>2nd Terengganu AHP Scientific Conference</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
-/* GLOBAL */
+/* ================= GLOBAL ================= */
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
@@ -19,7 +18,7 @@ body {
     overflow-x: hidden;
 }
 
-/* NAVBAR */
+/* ================= NAVBAR ================= */
 .navbar {
     position: sticky;
     top: 0;
@@ -28,7 +27,6 @@ body {
     display: flex;
     justify-content: center;
     padding: 12px 0;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
 .nav-container a {
@@ -36,14 +34,9 @@ body {
     text-decoration: none;
     margin: 0 20px;
     font-weight: 600;
-    transition: color 0.3s;
 }
 
-.nav-container a:hover {
-    color: #e0f2f1;
-}
-
-/* FLOATING BUTTONS */
+/* ================= FLOATING BUTTONS ================= */
 .floating-buttons {
     position: fixed;
     right: 20px;
@@ -56,25 +49,21 @@ body {
 }
 
 .floating-buttons a {
-    text-decoration: none;
-    padding: 20px 25px;
+    padding: 20px 26px;
     background: linear-gradient(135deg, #0a5c6d, #0f8a99);
     color: white;
-    font-size: 16px;
     font-weight: 700;
     border-radius: 40px;
-    text-align: center;
-    box-shadow: 0 12px 30px rgba(0,0,0,0.25);
-    transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+    text-decoration: none;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.25);
+    transition: transform 0.3s;
 }
 
 .floating-buttons a:hover {
-    background: linear-gradient(135deg, #0f8a99, #0a5c6d);
-    transform: translateY(-5px) scale(1.05);
-    box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+    transform: scale(1.08);
 }
 
-/* HERO - PARALLAX */
+/* ================= HERO PARALLAX ================= */
 .hero {
     min-height: 100vh;
     position: relative;
@@ -83,14 +72,11 @@ body {
     justify-content: center;
     text-align: center;
     color: white;
-    padding: 40px 20px;
-    overflow: hidden;
 }
 
 .hero-bg {
     position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
+    inset: 0;
     background: url("images/hero-bg.jpg") center/cover no-repeat;
     z-index: -1;
     will-change: transform;
@@ -98,278 +84,111 @@ body {
 
 .hero-content {
     max-width: 1000px;
-    animation: fadeUp 1.6s ease;
-}
-
-@keyframes fadeUp {
-    from { opacity: 0; transform: translateY(30px); }
-    to { opacity: 1; transform: translateY(0); }
 }
 
 .join-text {
     font-size: 80px;
     font-weight: 800;
-    letter-spacing: 1.5px;
-    margin-bottom: 30px;
 }
 
-.title-row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-}
-
-.title-row img {
-    width: 90px;
-}
-
-.title-block {
-    max-width: 650px;
-}
-
-.title-block h1 {
-    font-size: 45px;
-    font-weight: 700;
-    line-height: 1.3;
-    margin: 0;
-}
-
-.slogan {
-    margin-top: 22px;
-    font-size: 24px;
-    font-weight: 400;
-    opacity: 0.95;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 1.4;
-}
-
-/* SECTIONS */
+/* ================= SECTIONS ================= */
 .section {
     padding: 100px 20px;
     max-width: 1200px;
     margin: auto;
-    position: relative;
 }
 
-/* WELCOME */
+/* ================= WELCOME ================= */
 #welcome {
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start; /* align text to top of image */
-    justify-content: flex-start; /* start from left */
     gap: 40px;
-    overflow: hidden;
-}
-
-.welcome-image {
-    flex: 0 0 auto; /* keep image natural size */
+    align-items: flex-start;
 }
 
 .welcome-image img {
-    width: 100%;
     max-width: 400px;
     border-radius: 10px;
     box-shadow: 0 12px 30px rgba(0,0,0,0.18);
 }
 
 .welcome-text {
-    flex: 1 1 auto; /* fill remaining space next to image */
-    max-width: 600px; /* optional limit */
-    will-change: transform, opacity;
+    max-width: 600px;
 }
 
-/* CONFERENCE DETAILS */
-#details {
-    background: #f8fafc;
-    text-align: center;
-}
-
-.conference-date {
-    font-size: 60px;
-    font-weight: 800;
-    color: #0a5c6d;
-    margin-bottom: 15px;
-}
-
-.conference-venue {
-    font-size: 20px;
-    color: #4b5563;
-    margin-bottom: 50px;
-}
-
-.details-header {
-    font-size: 28px;
-    font-weight: 700;
-    color: #0a5c6d;
-    margin: 40px 0 25px 0;
-}
-
-/* CATEGORY GRID */
-.category-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 20px;
-    max-width: 900px;
-    margin: 0 auto 50px auto;
-}
-
-.category-box {
-    background: #ffffff;
-    border: 2px solid #0a5c6d;
-    border-radius: 12px;
-    padding: 30px 20px;
-    text-align: center;
-    font-weight: 600;
-    font-size: 18px;
-    color: #0a5c6d;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.category-box:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-}
-
-/* REGISTRATION FEES */
-.registration-fees {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 50px;
-}
-
-.registration-fees span {
-    color: #0a5c6d;
-    font-weight: 800;
-    font-size: 22px;
-}
-
-/* IMPORTANT DATES */
-.important-dates {
-    background: linear-gradient(90deg, #e0f2f1, #ffffff);
-    border-left: 6px solid #0a5c6d;
-    padding: 25px 30px;
-    border-radius: 12px;
-    max-width: 900px;
-    margin: 0 auto 80px auto;
-    font-size: 17px;
-    line-height: 1.8;
-    font-weight: 500;
-    color: #1f2933;
-    text-align: left;
-}
-
-.important-dates p {
-    margin: 10px 0;
-}
-
-/* INVITED SPEAKERS */
+/* ================= SPEAKERS ================= */
 .speakers-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 30px;
-    max-width: 1000px;
-    margin: 0 auto;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 40px;
     text-align: center;
 }
 
 .speaker-box img {
     width: 180px;
     height: 180px;
-    object-fit: cover;
     border-radius: 50%;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    margin-bottom: 15px;
+    transition: transform 0.4s, box-shadow 0.4s;
 }
 
-.speaker-box h4 {
-    font-size: 18px;
-    color: #0a5c6d;
-    margin: 0;
+.speaker-box:hover img {
+    transform: scale(1.12) translateY(-8px);
+    box-shadow: 0 20px 45px rgba(10,92,109,0.45);
 }
 
-/* Scroll animations */
-.animate {
-    opacity: 0;
-    transform: translateY(30px);
-    transition: all 0.8s ease-out;
+/* ================= TIMELINE ================= */
+.timeline-container {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1000px;
+    margin: 60px auto;
 }
 
-.animate.visible {
-    opacity: 1;
-    transform: translateY(0);
+.timeline-line {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    height: 4px;
+    background: linear-gradient(to right, #0a5c6d, #0f8a99);
 }
 
-/* FOOTER */
+.timeline-item {
+    width: 220px;
+    background: white;
+    padding: 20px;
+    border-radius: 14px;
+    text-align: center;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+    transition: transform 0.3s;
+}
+
+.timeline-item:hover {
+    transform: scale(1.08);
+}
+
+/* ================= FOOTER ================= */
 footer {
     background: #083f4a;
     color: white;
     text-align: center;
     padding: 25px;
-    font-size: 14px;
 }
 
-/* RESPONSIVE */
-@media(max-width: 900px) {
+/* ================= MOBILE ================= */
+@media(max-width:900px){
     #welcome {
         flex-direction: column;
         text-align: center;
     }
 
-    .welcome-text {
-        max-width: 100%;
-        padding: 0;
-        margin: 0 auto;
+    .timeline-container {
+        flex-direction: column;
+        gap: 30px;
     }
 
-    .floating-buttons {
-        right: 10px;
-    }
-
-    .join-text {
-        font-size: 52px;
-    }
-
-    .title-block h1 {
-        font-size: 32px;
-    }
-
-    .slogan {
-        font-size: 18px;
-    }
-
-    .conference-date {
-        font-size: 48px;
-    }
-
-    .conference-venue {
-        font-size: 18px;
-    }
-
-    .details-header {
-        font-size: 24px;
-    }
-
-    .category-box {
-        padding: 20px 15px;
-        font-size: 16px;
-    }
-
-    .registration-fees {
-        font-size: 18px;
-    }
-
-    .important-dates {
-        padding: 20px 15px;
-    }
-
-    .speaker-box img {
-        width: 140px;
-        height: 140px;
+    .timeline-line {
+        display: none;
     }
 }
 </style>
@@ -377,7 +196,6 @@ footer {
 
 <body>
 
-<!-- NAVBAR -->
 <nav class="navbar">
     <div class="nav-container">
         <a href="#hero">Home</a>
@@ -386,153 +204,74 @@ footer {
     </div>
 </nav>
 
-<!-- FLOATING BUTTONS -->
 <div class="floating-buttons">
-    <a href="https://forms.google.com" target="_blank">Register Now</a>
-    <a href="https://forms.google.com" target="_blank">Submit Abstract</a>
+    <a href="#">Register Now</a>
+    <a href="#">Submit Abstract</a>
 </div>
 
-<!-- HERO -->
 <section id="hero" class="hero">
     <div class="hero-bg"></div>
     <div class="hero-content">
         <div class="join-text">Let’s Join</div>
-        <div class="title-row">
-            <img src="images/logo-left.png" alt="Logo Left">
-            <div class="title-block">
-                <h1>
-                    2nd TERENGGANU ALLIED HEALTH PROFESSIONAL (AHP)<br>
-                    SCIENTIFIC CONFERENCE
-                </h1>
-                <div class="slogan">
-                    Empowering Allied Health Professional:<br> 
-                    Leading Change for Better Health Outcomes
-                </div>
-            </div>
-            <img src="images/logo-right.png" alt="Logo Right">
-        </div>
+        <h1>2nd Terengganu AHP Scientific Conference</h1>
     </div>
 </section>
 
-<!-- WELCOME -->
 <section id="welcome" class="section">
     <div class="welcome-image">
-        <img src="images/president.jpg" alt="President AHP Terengganu">
+        <img src="images/president.jpg">
     </div>
     <div class="welcome-text">
         <h2>Welcome Message</h2>
-        <h3>President, Allied Health Practitioners Negeri Terengganu</h3>
-        <p>
-            On behalf of the Allied Health Practitioners Negeri Terengganu,
-            it is my great pleasure to welcome you to the 2nd Terengganu
-            Allied Health Professional Scientific Conference.
-        </p>
-        <p>
-            This conference provides an important platform for allied health
-            professionals to present research, share clinical experiences,
-            and explore innovations that contribute to better health outcomes.
-        </p>
-        <p>
-            We look forward to your participation and meaningful engagement.
-        </p>
+        <p>We welcome all allied health professionals...</p>
     </div>
 </section>
 
-<!-- DETAILS -->
-<section id="details" class="section details">
+<section id="details" class="section">
 
-    <div class="conference-date">22-23 September 2026</div>
-    <div class="conference-venue">
-        Ar-Riyadah Residence, Kuala Nerus, Terengganu, Malaysia
+<h3>Invited Speakers</h3>
+<div class="speakers-grid">
+    <div class="speaker-box"><img src="images/speaker1.jpg"><h4>Speaker 1</h4></div>
+    <div class="speaker-box"><img src="images/speaker2.jpg"><h4>Speaker 2</h4></div>
+    <div class="speaker-box"><img src="images/speaker3.jpg"><h4>Speaker 3</h4></div>
+</div>
+
+<h3 style="margin-top:80px">Important Dates</h3>
+<div class="timeline-container">
+    <div class="timeline-line"></div>
+
+    <div class="timeline-item">
+        <h4>2 Jan 2026</h4>
+        <p>Abstract & Registration Open</p>
     </div>
 
-    <!-- INVITED SPEAKERS -->
-    <h3 class="details-header">Invited Speakers</h3>
-    <div class="speakers-grid">
-        <div class="speaker-box">
-            <img src="images/speaker1.jpg" alt="Speaker 1">
-            <h4>Speaker 1 Name</h4>
-        </div>
-        <div class="speaker-box">
-            <img src="images/speaker2.jpg" alt="Speaker 2">
-            <h4>Speaker 2 Name</h4>
-        </div>
-        <div class="speaker-box">
-            <img src="images/speaker3.jpg" alt="Speaker 3">
-            <h4>Speaker 3 Name</h4>
-        </div>
+    <div class="timeline-item">
+        <h4>31 Mar 2026</h4>
+        <p>Submission Deadline</p>
     </div>
 
-    <!-- CATEGORY -->
-    <h3 class="details-header">Category</h3>
-    <div class="category-grid">
-        <div class="category-box animate">Oral Research</div>
-        <div class="category-box animate">Oral Case Study</div>
-        <div class="category-box animate">Poster</div>
+    <div class="timeline-item">
+        <h4>22 Jun 2026</h4>
+        <p>Registration Closes</p>
     </div>
 
-    <!-- REGISTRATION FEES -->
-    <h3 class="details-header">Registration Fees</h3>
-    <div class="registration-fees animate">
-        <div>PASKBT Member: <span>FREE</span></div>
-        <div>Non-PASKBT (Terengganu): <span>RM 50</span></div>
-        <div>Non-PASKBT (Outside Terengganu): <span>RM 150</span></div>
+    <div class="timeline-item">
+        <h4>22–23 Sep 2026</h4>
+        <p>Conference Days</p>
     </div>
+</div>
 
-    <!-- IMPORTANT DATES -->
-    <h3 class="details-header">Important Dates</h3>
-    <div class="important-dates animate">
-        <p>Abstract & e-Poster Submission (open): 2 January 2026</p>
-        <p>Registration (open): 2 January 2026</p>
-        <p>Abstract Submission (deadline): 31 March 2026</p>
-        <p>e-Poster Submission (deadline): 31 March 2026</p>
-        <p>Registration (deadline): 22 June 2026</p>
-    </div>
 </section>
 
 <footer>
-    &copy; 2026 Terengganu Allied Health Practitioners Conference
+&copy; 2026 Terengganu Allied Health Practitioners Conference
 </footer>
 
 <script>
-// HERO PARALLAX
+/* HERO PARALLAX */
 const heroBg = document.querySelector('.hero-bg');
 window.addEventListener('scroll', () => {
-    const scrollY = window.scrollY;
-    heroBg.style.transform = `translateY(${scrollY * 0.3}px)`;
-});
-
-// SCROLL ANIMATIONS
-const elements = document.querySelectorAll('.animate');
-const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-        if(entry.isIntersecting) {
-            entry.target.classList.add('visible');
-        }
-    });
-}, { threshold: 0.15 });
-elements.forEach(el => observer.observe(el));
-
-// WELCOME SECTION PARALLAX ENTRANCE
-const welcomeSection = document.querySelector('#welcome');
-const welcomeImage = document.querySelector('.welcome-image');
-const welcomeText = document.querySelector('.welcome-text');
-
-window.addEventListener('scroll', () => {
-    const sectionTop = welcomeSection.getBoundingClientRect().top;
-    const windowHeight = window.innerHeight;
-
-    if(sectionTop < windowHeight) {
-        const progress = Math.min(1, (windowHeight - sectionTop) / windowHeight);
-
-        // Image moves from left to center
-        welcomeImage.style.transform = `translateX(${(-50 + 50 * progress)}%)`;
-        welcomeImage.style.opacity = progress;
-
-        // Text moves from right to center
-        welcomeText.style.transform = `translateX(${(50 - 50 * progress)}%)`;
-        welcomeText.style.opacity = progress;
-    }
+    heroBg.style.transform = `translateY(${window.scrollY * 0.3}px)`;
 });
 </script>
 
