--- a/index.html
+++ b/index.html
@@ -981,9 +981,10 @@
         </div>
         <div class="welcome-text animate">
             <h2>Welcome Message</h2>
-            <h3>President, Allied Health Practitioners Negeri Terengganu</h3>
+            <h3>Mr. Romel Shahfri Ahmad Tajuddin,<br>
+                President, Terengganu Allied Health Sciences Association</h3>
             <p>
-                On behalf of the Allied Health Practitioners Negeri Terengganu, it is my great pleasure to welcome you to the 2nd Terengganu Allied Health Professional Scientific Conference.
+                On behalf of the Allied Health Professionals Negeri Terengganu, it is my great pleasure to welcome you to the 2nd Terengganu Allied Health Professional Scientific Conference.
             </p>
             <p>
                 This conference provides an important platform for allied health professionals to present research, share clinical experiences, and explore innovations that contribute to better health outcomes.
@@ -1032,21 +1033,21 @@
         <div class="speakers-grid">
             <div class="speaker-box animate">
                 <img src="images/speaker1.jpg" alt="Speaker 1">
-                <h4>Prof. Dr. Aminah Yusof</h4>
-                <div class="speaker-title">Clinical Physiotherapy Specialist</div>
-                <p>Topic: Innovations in Rehabilitation Sciences</p>
+                <h4>Prof. Dr. Syed Hatim Noor</h4>
+                <div class="speaker-title">Professor of Medical Statistics</div>
+                <p>Topic: aaaaaaaaaaaa</p>
             </div>
             <div class="speaker-box animate">
                 <img src="images/speaker2.jpg" alt="Speaker 2">
-                <h4>Dr. Michael Chen</h4>
-                <div class="speaker-title">Healthcare Technology Innovator</div>
+                <h4>Dr. Nik Armiza Binti Mat Rashid</h4>
+                <div class="speaker-title">Histopathology Technology Innovator</div>
                 <p>Topic: Digital Transformation in Allied Health</p>
             </div>
             <div class="speaker-box animate">
                 <img src="images/speaker3.jpg" alt="Speaker 3">
-                <h4>Dr. Sarah Johnson</h4>
-                <div class="speaker-title">Public Health Researcher</div>
-                <p>Topic: Evidence-Based Practice in Allied Health</p>
+                <h4>Dr. EJEN ALI</h4>
+                <div class="speaker-title">EJEN RAHSIA</div>
+                <p>Topic: yoyo battle</p>
             </div>
         </div>
         
