--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                         <h3>Abstract & Technical Support</h3>
                         <p>For abstract submission and technical questions</p>
                     </div>
-                    <a href="https://wa.me/60129876543?text=Hello%20AHP%20Conference%20Team,%20I%20need%20help%20with%20abstract%20submission" 
+                    <a href="https://wa.link/98umws" 
                        target="_blank" 
                        class="whatsapp-btn">
                         <i class="fab fa-whatsapp"></i> +60 12-987 6543
