--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
                     <a href="https://wa.link/98umws" 
                        target="_blank" 
                        class="whatsapp-btn">
-                        <i class="fab fa-whatsapp"></i> +60 12-987 6543
+                        <i class="fab fa-whatsapp"></i> +6019-9144095
                     </a>
                 </div>
             </div>
