--- a/index.html
+++ b/index.html
@@ -1143,12 +1143,12 @@
         <div class="organizers-grid">
             <div class="organizer-card animate">
                 <img src="images/organizer1.png" alt="Allied Health Practitioners Negeri Terengganu Logo">
-                <h3>Allied Health Practitioners Negeri Terengganu</h3>
+                <h3>Persatuan Ahli Sains Kesihatan Bersekutu Terengganu(PASKBT)</h3>
                 <p>The main organizing body representing allied health professionals in Terengganu, Malaysia.</p>
             </div>
             <div class="organizer-card animate">
                 <img src="images/organizer2.png" alt="Ministry of Health Malaysia Logo">
-                <h3>Ministry of Health Malaysia</h3>
+                <h3>Jabatan Kesihatan Negeri Terengganu</h3>
                 <p>Collaborating with the Ministry of Health to promote excellence in allied health practice and research.</p>
             </div>
         </div>
