--- a/index.html
+++ b/index.html
@@ -1144,12 +1144,12 @@
             <div class="organizer-card animate">
                 <img src="images/organizer2.png" alt="Ministry of Health Malaysia Logo">
                 <h3>Jabatan Kesihatan Negeri Terengganu</h3>
-                <p>Collaborating with the Ministry of Health to promote excellence in allied health practice and research.</p>
+                <p>Collaborating with the Ministry of Health (JKNT) to promote excellence in allied health practice and research.</p>
             </div>
             <div class="organizer-card animate">
                 <img src="images/organizer1.png" alt="Allied Health Practitioners Negeri Terengganu Logo">
                 <h3>Persatuan Ahli Sains Kesihatan Bersekutu Terengganu(PASKBT)</h3>
-                <p>The main organizing body representing allied health professionals in Terengganu, Malaysia.</p>
+                <p>The main organizing body representing Allied Health Professionals in Terengganu, Malaysia.</p>
             </div>
         </div>
     </section>
