--- a/index.html
+++ b/index.html
@@ -1380,9 +1380,9 @@
             </div>
             <div class="speaker-box animate">
                 <img src="images/speaker3.jpg" alt="Speaker 3">
-                <h4>Dr. Sarah Johnson</h4>
-                <div class="speaker-title">Healthcare Policy Expert</div>
-                <p class="speaker-topic">Topic: Future Trends in Allied Health Practice</p>
+                <h4>EJEN ALI</h4>
+                <div class="speaker-title">EJEN MAHARAYA</div>
+                <p class="speaker-topic">Topic: Yoyo lesson</p>
             </div>
         </div>
         
@@ -1392,7 +1392,6 @@
             <div class="category-box animate">Oral Research</div>
             <div class="category-box animate">Oral Case Study</div>
             <div class="category-box animate">Poster Presentation</div>
-            <div class="category-box animate">Workshop</div>
         </div>
         
         <!-- REGISTRATION FEES -->
