--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
             color: white;
             padding: 40px 20px;
             overflow: hidden;
-            background: linear-gradient(135deg, rgba(17, 32, 69, 0.92), rgba(26, 125, 140, 0.88)), 
-                        url('https://drive.google.com/file/d/1tb3EIsS-mcq07NKexiFv4IeGauNN48xO/view?usp=sharing');
+            linear-gradient(135deg, rgba(17, 32, 69, 0.92), rgba(26, 125, 140, 0.88)), 
+            url('images/background.jpg')
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
