--- a/index.html
+++ b/index.html
@@ -1618,7 +1618,7 @@
         <a href="https://forms.google.com" target="_blank">
             <i class="fas fa-user-plus"></i> Register
         </a>
-        <a href="https://forms.google.com" target="_blank">
+        <a href="https://forms.gle/1xMJapM1LSaVoeTa6" target="_blank">
             <i class="fas fa-paper-plane"></i> Submit Abstract
         </a>
     </div>
@@ -1647,7 +1647,7 @@
                 <a href="https://forms.google.com" target="_blank" class="hero-btn btn-primary">
                     <i class="fas fa-user-plus"></i> Register Now
                 </a>
-                <a href="https://forms.google.com" target="_blank" class="hero-btn btn-secondary">
+                <a href="https://forms.gle/1xMJapM1LSaVoeTa6" target="_blank" class="hero-btn btn-secondary">
                     <i class="fas fa-paper-plane"></i> Submit Abstract
                 </a>
             </div>
@@ -2039,7 +2039,7 @@
                 <h3>Important Links</h3>
                 <ul>
                     <li><a href="https://forms.google.com" target="_blank"><i class="fas fa-external-link-alt"></i> Registration Form</a></li>
-                    <li><a href="https://forms.google.com" target="_blank"><i class="fas fa-external-link-alt"></i> Abstract Submission</a></li>
+                    <li><a href="https://forms.gle/1xMJapM1LSaVoeTa6" target="_blank"><i class="fas fa-external-link-alt"></i> Abstract Submission</a></li>
                     <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact Us</a></li>
                 </ul>
             </div>
