--- a/index.html
+++ b/index.html
@@ -2045,7 +2045,7 @@
             </div>
         </div>
         <div class="copyright">
-            &copy; 2026 Terengganu Allied Health Practitioners Conference. All rights reserved.
+            &copy; 2026 Terengganu Allied Health Practitioners Conference. All rights reserved. (Osama Bin Abdul Nasir-Medical Lab Scientist_Microbiology)
         </div>
     </footer>
     
