--- a/index.html
+++ b/index.html
@@ -1968,9 +1968,9 @@
         <!-- CATEGORY - 3 CATEGORIES ONLY -->
         <h3 class="details-header" data-aos="fade-up">Presentation Categories</h3>
         <div class="category-grid">
-            <div class="category-box" data-aos="fade-up" data-aos-delay="200">Oral Research</div>
-            <div class="category-box" data-aos="fade-up" data-aos-delay="300">Oral Case Study</div>
-            <div class="category-box" data-aos="fade-up" data-aos-delay="400">Poster Presentation</div>
+            <div class="category-box" data-aos="fade-up" data-aos-delay="200">Oral (Research)</div>
+            <div class="category-box" data-aos="fade-up" data-aos-delay="300">Oral (Case Study)</div>
+            <div class="category-box" data-aos="fade-up" data-aos-delay="400">Poster (Research)</div>
         </div>
         
         <!-- REGISTRATION FEES -->
