--- a/index.html
+++ b/index.html
@@ -2144,37 +2144,37 @@
         <div class="sponsors-grid major-sponsors" data-aos="fade-up" data-aos-delay="200">
             <!-- Row 1 - 4 logos -->
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor1.png" alt="Sponsor 1">
+                <img src="images/sponsor1.png" alt="Sponsor 1 logo & website link">
                 <div class="sponsor-name">Sponsor 1</div>
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor2.png" alt="Sponsor 2">
+                <img src="images/sponsor2.png" alt="Sponsor 2 logo & website link">
                 <div class="sponsor-name">Sponsor 2</div>
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor3.png" alt="Sponsor 3">
+                <img src="images/sponsor3.png" alt="Sponsor 3 logo & website link">
                 <div class="sponsor-name">Sponsor 3</div>
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor4.png" alt="Sponsor 4">
+                <img src="images/sponsor4.png" alt="Sponsor 4 logo & website link">
                 <div class="sponsor-name">Sponsor 4</div>
             </a>
             
             <!-- Row 2 - 4 logos -->
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor5.png" alt="Sponsor 5">
+                <img src="images/sponsor5.png" alt="Sponsor 5 logo & website link">
                 <div class="sponsor-name">Sponsor 5</div>
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor16.png" alt="Sponsor 6">
+                <img src="images/sponsor16.png" alt="Sponsor 6 logo & website link">
                 <div class="sponsor-name">Sponsor 6</div>
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor17.png" alt="Sponsor 7">
+                <img src="images/sponsor17.png" alt="Sponsor 7 logo & website link">
                 <div class="sponsor-name">Sponsor 7</div>
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo major">
-                <img src="images/sponsor18.png" alt="Sponsor 8">
+                <img src="images/sponsor18.png" alt="Sponsor 8 logo & website link">
                 <div class="sponsor-name">Sponsor 8</div>
             </a>
         </div>
@@ -2182,34 +2182,34 @@
         <!-- Supporting Sponsors (10 smaller logos) -->
         <div class="sponsors-grid supporting-sponsors" data-aos="fade-up" data-aos-delay="400">
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor6.png" alt="1">
+                <img src="images/sponsor6.png" alt="1 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor7.png" alt="2">
+                <img src="images/sponsor7.png" alt="2 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor8.png" alt="3">
+                <img src="images/sponsor8.png" alt="3 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor9.png" alt="4">
+                <img src="images/sponsor9.png" alt="4 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor10.png" alt="5">
+                <img src="images/sponsor10.png" alt="5 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor11.png" alt="6">
+                <img src="images/sponsor11.png" alt="6 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor12.png" alt="7">
+                <img src="images/sponsor12.png" alt="7 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor13.png" alt="8">
+                <img src="images/sponsor13.png" alt="8 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor14.png" alt="9">
+                <img src="images/sponsor14.png" alt="9 logo & website link">
             </a>
             <a href="https://ahpconference2026-hub.github.io/ahpconference2026/" target="_blank" class="sponsor-logo supporting">
-                <img src="images/sponsor15.png" alt="10">
+                <img src="images/sponsor15.png" alt="10 logo & website link">
             </a>
         </div>
         
