--- a/index.html
+++ b/index.html
@@ -2240,7 +2240,7 @@
                         <h3>Abstract & Technical Support</h3>
                         <p>For abstract submission and technical questions</p>
                     </div>
-                    <a href="https://wa.link/98umws" 
+                    <a href="https://wa.link/po8d6x" 
                        target="_blank" 
                        class="whatsapp-btn">
                         <i class="fab fa-whatsapp"></i> click me
