--- a/index.html
+++ b/index.html
@@ -2129,7 +2129,7 @@
                 <p>Collaborating with the Ministry of Health to promote excellence in allied health practice and research.</p>
             </div>
            <div class="organizer-card" data-aos="fade-up" data-aos-delay="400">
-                <img src="images/organizer1.png" alt="Allied Health Practitioners Negeri Terengganu Logo">
+                <img src="images/paskbt.png" alt="Allied Health Practitioners Negeri Terengganu Logo">
                 <h3>Persatuan Anggota Sains Kesihatan Bersekutu Negeri Terengganu</h3>
                 <p>The main organizing body representing Allied Health Professionals in Terengganu, Malaysia.</p>
             </div>
