--- a/index.html
+++ b/index.html
@@ -1918,7 +1918,7 @@
                 <img src="images/jury1.jpg" alt="Jury Panel Member 1">
                 <h4>ASSOC. PROF. DR.<br>
                     MARIAM BT TAIB</h4>
-                <div class="speaker-title">University Malaysia Terengganu</div>
+                <div class="speaker-title">ASSOCIATE PROFESSOR, UMT</div>
             </div>
             
             <!-- Jury Panel 2 -->
@@ -2020,7 +2020,7 @@
                     <h3>Become a Persatuan Ahli Sains Kesihatan Bersekutu(PASKBT) Member</h3>
                     <p>Click below to inquire about PASKBT membership benefits and application process</p>
                 </div>
-                <a href="https://wa.me/60123456789?text=Hello%20PASKBT,%20I%20would%20like%20to%20inquire%20about%20membership%20registration" 
+                <a href="https://wa.link/atvkrs" 
                    target="_blank" 
                    class="whatsapp-btn">
                     <i class="fab fa-whatsapp"></i> Join PASKBT
