--- a/index.html
+++ b/index.html
@@ -1898,15 +1898,15 @@
         <div class="speakers-grid">
             <div class="speaker-box" data-aos="fade-up" data-aos-delay="200">
                 <img src="images/speaker1.jpg" alt="Speaker 1">
-                <h4>Prof. Dr. Syed Hatim Noor</h4>
-                <div class="speaker-title">Professor of Biomedical Statistics</div>
-                <p class="speaker-topic">Topic: Advanced Statistical Methods in Healthcare Research</p>
+                <h4>TBA</h4>
+                <div class="speaker-title">TBA</div>
+                <p class="speaker-topic">Topic: TBA</p>
             </div>
             <div class="speaker-box" data-aos="fade-up" data-aos-delay="400">
                 <img src="images/speaker2.jpg" alt="Speaker 2">
-                <h4>Dr. Nik Armiza Binti Mat Rashid</h4>
-                <div class="speaker-title">Histopathology Technology Innovator</div>
-                <p class="speaker-topic">Topic: Digital Transformation in Allied Health</p>
+                <h4>TBA</h4>
+                <div class="speaker-title">TBA</div>
+                <p class="speaker-topic">Topic: TBA</p>
             </div>
         </div>
         
