--- a/index.html
+++ b/index.html
@@ -2319,19 +2319,19 @@
                         <a href="https://wa.link/jkvq7t" 
                            target="_blank" 
                            class="whatsapp-btn">
-                            <i class="fab fa-whatsapp"></i> Pn.Malihah
+                            <i class="fab fa-whatsapp"></i> Pn.Malihah (click me)
                         </a>
                         
                         <a href="https://wa.link/zu3b9p" 
                            target="_blank" 
                            class="whatsapp-btn">
-                            <i class="fab fa-whatsapp"></i> Pn.Hizwani
+                            <i class="fab fa-whatsapp"></i> Pn.Hizwani (click me)
                         </a>
                         
                         <a href="https://wa.link/dottya" 
                            target="_blank" 
                            class="whatsapp-btn">
-                            <i class="fab fa-whatsapp"></i> En.Hasni
+                            <i class="fab fa-whatsapp"></i> En.Hasni (click me)
                         </a>
                     </div>
                 </div>
