--- a/index.html
+++ b/index.html
@@ -2162,6 +2162,12 @@
                 height: 2px;
                 margin: 3px 0;
             }
+
+        /* FIX FOR DESKTOP NAVBAR OVERLAP */
+        @media(min-width: 769px) {
+            .hero {
+                padding-top: 120px;
+            }
         }
     </style>
 </head>
