--- a/index.html
+++ b/index.html
@@ -2850,7 +2850,7 @@
                 <p><i class="fas fa-car"></i> Parking: Ample parking available for participants</p>
                 
                 <div style="display: flex; flex-wrap: wrap; gap: 15px; margin-top: 20px;">
-                    <a href="https://maps.app.goo.gl/" 
+                    <a href="https://earth.google.com/web/search/kuala+terengganu+drawbridge/@5.3397734,103.1448006,0.29229687a,841.12800662d,35y,190.95741243h,60t,0r/data=CooBGlwSVgolMHgzMWI3YmRjMWQwZGY0ZWMzOjB4NzBiYTdlOTY1YWJiNDI5ORnxM-SO7VsVQCE8XLxpRMlZQCoba3VhbGEgdGVyZW5nZ2FudSBkcmF3YnJpZGdlGAIgASImCiQJcmEFAn1DNUARcWEFAn1DNcAZGt8_MuuySUAhLvxUpnDuScBCAggBOgMKATBCAggASg0I____________ARAA" 
                        target="_blank" 
                        class="map-link"
                        title="Click to open in Google Maps">
@@ -2858,7 +2858,7 @@
                     </a>
                     
                     <!-- ADDED BOOKING BUTTON -->
-                    <a href="https://wa.link/" 
+                    <a href="https://wa.link/jkvq7t" 
                        target="_blank" 
                        class="map-link"
                        style="background: var(--whatsapp-green);"
